# project-euler

./: .gitignore  12.hs  13.hs  14Collatz  14Collatz.hi  21.hs  23  23.hi  23.hs  23.prof  26.hs  27  27.hi  27.hs  32.hs  35  35.hi  361.hs  370.hs  371  371.c  371.hi  371.hs  371.prof  371.prof2  372.hs  38.hs  39.hs  40.hs  400.hs  41.hs  416.lhs  42.hs  43.hs  46.hs  50.hs  92.hs  BenchLibraries.hs  BenchProblems.hs  Digits.hi  (+10 more)
Common/: Digits.hs  Matrix.hs  Parsing.hs  Prime.hs  Sequence.hs  String.hs  Trees.hs
Common/Tests/: Digits.hs  Prime.hs  Sequence.hs
Problems/: 11.hs  14Collatz.hs  17NumberLetters.hs  18.hs  19.hs  2.hs  206.hs  24.hs  28.hs  3.hs  31.hs  328.hs  35.hs  369.hs  37.hs  374.hs  4.hs  414.hs  44.hs  45.hs  47.hs  49.hs  50.hs  52.hs  55.hs  60.hs  Problem51.hs  Problem57.hs  Problem59.hs  Problem63.hs  Problem79.hs
Tests/: Main.hs
