name:                projecteuler
version:             0.1.0.0
synopsis:            A dump of my Project Euler solutions
author:              Michael Burge
maintainer:          mike29936@gmail.com
category:            Project Euler
build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8

library
  exposed-modules: Problems
  build-depends: base

benchmark problems
  type: exitcode-stdio-1.0
  hs-source-dirs: .
  main-is: BenchProblems.hs
  build-depends: base, criterion, containers, deepseq, parsec, digits
  ghc-options: -O2

benchmark libraries
  type: exitcode-stdio-1.0
  hs-source-dirs: .
  main-is: BenchLibraries.hs
  build-depends: base, criterion, containers, deepseq, parsec, digits
  ghc-options: -O2 -rtsopts -with-rtsopts=-M512m

test-suite tests
  type: exitcode-stdio-1.0
  build-depends: QuickCheck -any, base -any, test-framework, test-framework-quickcheck2, test-framework-hunit, digits, HUnit
  type: exitcode-stdio-1.0
  main-is: Tests/Main.hs
  buildable: True
  hs-source-dirs: .
  ghc-options: -rtsopts -with-rtsopts=-M512m